Fix issues with RunEmrJob running locally:
- Remove duplicated spark params injection from GraphTransformer
- Fix RunEmrJob to not inject the local spark params into the class field, but only into the EMR script params right away before using them to not break the #isEquivalentTo() implementation anymore
- Fix #getScriptParams() to assume empty-strings as values for value-less named-params, because named params with null-values are not getting serialized by the default serializer
- Add "[EMR-local]" prefix to all logs coming from the RunEmrJob step, to simplify finding them inside the local-stack logs

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>